# msys2-autobuild-controller

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  application.cfg.sample  flask_app.py  github_app_utils.py  job_log_parse.py  permissions.py  pyproject.toml  validate_autobuild_inputs.py
.github/workflows/: main.yml
flask_app/: __init__.py  permissions.py
flask_app/static/: style.css
flask_app/templates/: base.html  index.html  index_anonymous.html  maint.html  trigger.html
static/: style.css
templates/: base.html  index.html  trigger.html
