[tool.poetry]
name = "msys2-autobuild-controller"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.0"
requests = "^2.25.1"
cryptography = ">=3.4.7"
PyGithub = "^1.54.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
