[tool.poetry]
name = "msys2-autobuild-controller"
version = "0.1.0"
description = ""
authors = ["Jeremy Drake <github@jdrake.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
requests = "^2.25.1"
cryptography = ">=3.4.7"
PyGithub = "^2.2.0"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "1.8.0"
types-requests = "^2.31.0.20240125"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
